# Sudoku

./: README.md
Sudoku/: CMakeLists.txt  CellEventFilter.cpp  FieldModel.cpp  FieldModel.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Sudoku_ru_RU.ts  Types.h  main.cpp
Sudoku/includes/: CellEventFilter.h  FieldModel.h  MainWindow.ui  Types.h
Sudoku/resources/: resources.qrc
Sudoku/source/: CellEventFilter.cpp  FieldModel.cpp  MainWindow.cpp  main.cpp
Sudoku/source/includes/: MainWindow.h
Sudoku/source/resources/: resources.qrc
